@@ -1,7 +1,7 @@
 0.1a3
 -----
 
- * New release based on Python trunk r62498 
+ * New release based on Python trunk r62498
 
 0.1a2
 -----
@@ -12,3 +12,4 @@
 -----
 
  * initial release
+
